# OSLabs

./: CMakeLists.txt
Lab1/: CMakeLists.txt
Lab1/include/lib/: child.h  macros.h
Lab1/src/: exec.c  parent.c
Lab2/: CMakeLists.txt
Lab2/exec/: main.c
Lab2/include/lib/: macroses.h  planner.h  structures.h  tasks.h
Lab2/research/: make_and_execute.py  research_results.py  results
Lab2/test/: CMakeLists.txt
Lab3/include/lib/: child.h  macros.h  parent.h  shared.h  wrapper.h
Lab3/src/: child.c  exec.c  parent.c
Lab4/: compile.py  derivative.h  dl_main.c  e.h  impl1.c  impl2.c  makefile  st_main.c
include/lib/: parent.h  wrapper.h
src/: child.c  exec.c  main.c
